--- a/static/css/base.css
+++ b/static/css/base.css
@@ -296,6 +296,12 @@ a:active,
     height: 220px;
 }
 
+.results {
+    font-weight: 900;
+    letter-spacing: 0.1rem;
+    font-size: 2rem;
+}
+
 /***********************Trip Details*/
 
 .btn-book {
