--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -4,7 +4,7 @@
 {% block extra_title %} Trips {% endblock %}
 
 {% block content %}
-<section>
+<section class="main-content">
     <div class="container">
         <!--heading-->
         <div class="row">
@@ -48,10 +48,19 @@
             </div>
         </div>
     </div>
-</section>
+
 <!--display all the trips-->
-<section class="main-content">
+
     <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>
+                   <span class="results">{{ result_count }}</span> Results Found
+                </p>
+ 
+            </div>
+        </div>
+        <hr>
         <div class="row">
             {% for trip in trips %}
             <div class="col-lg-3 col-md-6 col-sm-12">
