--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -106,21 +106,46 @@
         <div class="row">
             <div class="col">
                 <nav aria-label="Page navigation example">
+                    <!--Check if the trips has more pages and display dynamically-->
+                    {% if trips.has_other_pages %}
                     <ul class="pagination justify-content-center">
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                          <span aria-hidden="true">&laquo;</span>
-                        </a>
-                      </li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                          <span aria-hidden="true">&raquo;</span>
-                        </a>
-                      </li>
+                        {% if trips.has_previous %}
+                        <li class="page-item">
+                          <a class="page-link" href="?page={{ trips.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                          </a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <a href="#" class="page-link" tabindex="-1" role="button" aria-disabled="true">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        <!--Dynamic page range-->
+                        {% for i in trips.paginator.page_range %}
+                            {% if trips.number == i %}
+                            <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+                            {% else %}
+                            <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        <!--Dynamic next button -->
+                        {% if trips.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ trips.next_page_number }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                      {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                      {% endif %}
                     </ul>
+                    {% endif %}
                   </nav>
             </div>
         </div>
