--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -39,20 +39,51 @@
         <!--Here we will bring the categories and display all the category names -->
         <!--Could also do filter by price and duration full day trips or half day trips-->
         <div class="row">
-            <div class="col-lg-6 offset-lg-3 col-md-6 offset-md-6 col-sm-6 offset-sm-6">
+            <div class="col-lg-6  col-md-6 offset-md-6 col-sm-6 offset-sm-6">
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                      Choose Your Category
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Choose Your Category
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <!--Get Category model function for category slack-->
+                        <!--Get Category model function for category slack-->
                         <li><a class="dropdown-item" href="{% url 'trips' %}">All Trips</a></li>
-                      {% for category in links %}
-                        <li><a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name | capfirst }}</a></li>
-                      {% endfor %}
+                        {% for category in links %}
+                        <li><a class="dropdown-item"
+                                href="{{ category.get_url }}">{{ category.category_name | capfirst }}</a></li>
+                        {% endfor %}
                     </ul>
-                  </div>
+                </div>
             </div>
+            <!--Sorting -->
+            <div class="col-lg-6  col-md-6 offset-md-6 col-sm-6 offset-sm-6">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Sort by Price
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <!--Get Category model function for category slack-->
+                        <li><a class="dropdown-item" href="{% url 'trips' %}">All Trips</a></li>
+                        {% for category in links %}
+                        <li><a class="dropdown-item"
+                                href="{{ category.get_url }}">{{ category.category_name | capfirst }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <!--Sorting end-->
+            <div class="btn-group">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                  Sort By
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <li><a class="dropdown-item" href="{% url 'search' %}?sort:adult_price&direction=asc">By Price</a></li>
+                  <li><a class="dropdown-item" href="{% url 'search' %}?sort:adult_price&direction=asc">By Rating</a></li>
+                  <li><a class="dropdown-item" href="{% url 'search' %}?sort:duration&direction=asc">By Duration</a></li>
+                  <li><a class="dropdown-item" href="{% url 'search' %}?sort:family_friendly&direction=asc">Family Friendly</a></li>
+                </ul>
+              </div>
         </div>
     </div>
 
@@ -65,7 +96,7 @@
                    <span class="results">{{ result_count }}</span> Results Found
                 </p>
                 {% if result_count == 0 %}
-                <p class="text-center">We do not have any trips with your search cretirea, please try again.</p>
+                <p class="text-center">We do not have any trips with your search criteria, please try again.</p>
                 {% endif %}
             </div>
         </div>
