--- a/bookings/templates/bookings/view_availability.html
+++ b/bookings/templates/bookings/view_availability.html
@@ -19,12 +19,12 @@
     <!--booking form-->
     <div class="row">
       <div class="col-lg-8 offset-lg-2 col-md-8 offeset-md-2 col-sm-12">
-        <form action="" method="POST" class="booking-form">
+        <form action="{% url 'add_to_bag' trip.id %}" method="POST" class="booking-form">
           {% csrf_token %}
           <div class="row">
             <div class="col">
               <label for="trip-name">{{ trip_name }}</label>
-              <input type="text" class="form-control disabled" name="trip-name" placeholder="{{ trip.name }}" aria-label="Trip Name">
+              <input type="text" class="form-control disabled" data-item_id="{{ trip.id }}" name="trip-name" placeholder="{{ trip.name }}" aria-label="Trip Name">
             </div>
           </div>
           <div class="row">
@@ -60,6 +60,8 @@
               <button type="submit" class="btn btn-lg add-booking-btn">Add to Suitcase</button>
             </div>
           </div>
+          <!--redirect path-->
+          <input type="hidden" name="redirect_url" value="{{ request.path }}">
         </form>
       </div>
     </div>
